swagger: document health controller
