# swagger.json
@@ -35,10 +35,19 @@
         "tags": [
           "Various"
         ],
-        "description": "",
+        "summary": "Health check",
+        "description": "Responds to request with \"pong\" message",
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Response message",
+            "content": {
+              "application/json": {
+                "example": {
+                  "success": true,
+                  "message": "pong"
+                }
+              }
+            }
           }
         }
       }
@@ -48,7 +57,8 @@
         "tags": [
           "Various"
         ],
-        "description": "",
+        "summary": "Local callback",
+        "description": "Used to generate a QR code and writes a log file. ONLY FOR DEVELOPMENT/TEST PURPOSES.",
         "parameters": [
           {
             "name": "x-api-key",
@@ -60,7 +70,14 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Response message",
+            "content": {
+              "application/json": {
+                "example": {
+                  "success": true
+                }
+              }
+            }
           },
           "403": {
             "description": "Forbidden.",
@@ -68,6 +85,16 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ForbiddenResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server Failure.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
                 }
               }
             }
